--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -8,6 +8,7 @@ services:
       - FLASK_CONFIG=${FLASK_CONFIG:-default}
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DATABASE_URL=${DATABASE_URL:-postgres://admin:root@db:5432/oneflask_db}
     volumes:
       - ../src:/code
     command: >
@@ -38,3 +39,18 @@ services:
       - 5555:5555
     depends_on:
       - redis
+
+  db:
+    image: postgres:13.0
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=oneflask_db
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    volumes:
+      - db:/var/lib/postgresql/data/pgdata
+    ports:
+      - "5432:5432"
+
+volumes:
+  db:
