--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 alembic==1.4.3
 amqp==5.0.1
 billiard==3.6.3.0
+blinker==1.4
 celery==5.0.0
 click==7.1.2
 click-didyoumean==0.0.3
 click-repl==0.1.6
 Flask==1.1.2
+Flask-JWT-Extended==3.24.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
 importlib-metadata==2.0.0
@@ -16,6 +18,8 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.8.0
 prompt-toolkit==3.0.7
+psycopg2-binary==2.8.6
+PyJWT==1.7.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
