--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ alembic==1.4.3
 amqp==5.0.1
 billiard==3.6.3.0
 blinker==1.4
-celery==5.0.0
+celery==5.0.5
 click==7.1.2
 click-didyoumean==0.0.3
+click-plugins==1.1.1
 click-repl==0.1.6
 Flask==1.1.2
 Flask-JWT-Extended==3.24.1
